--- a/templates/index.html
+++ b/templates/index.html
@@ -919,7 +919,7 @@
                     <div class="mpane-label">Level Reached</div>
                     <div class="mp-level-hero">
                         <div class="mp-level-num" id="mp-level-num">1</div>
-                        <div class="mp-level-lbl">of ∞</div>
+                        <div class="mp-level-lbl">of 50</div>
                     </div>
                     <div class="mpane-label">Medal History</div>
                     <div id="mp-medal-grid"></div>
